--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ensures mobile-responsive -->
+    <meta name="description" content="Portfolio of Rayyan Huda showcasing software development and design projects.">
+    <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
+    <meta name="author" content="Rayyan Huda">
     <title>Rayyan Huda | Portfolio</title>
+    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
     <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js"></script> <!-- link to the javascript file -->
+    <script src="main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
 </head>
 <body>
 <div id="header">
     <div class="container">
-        <nav>
+        <nav id="navbar">
             <img src="images/rh.png" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="images/external.pdf" target="_blank">Resume</a></li>
+                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
             </ul>
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -75,6 +78,7 @@
                         <span class="tag">Game Development</span>
                         <span class="tag">AWT & Swing Graphics</span>
                     </div>
+                    <div class="dimension"></div>
                 </div>
             </div>
 
@@ -104,6 +108,7 @@
                         <span class="tag">Algorithmic Thinking</span>
                         <span class="tag">Simulation</span>
                     </div>
+                    <div class="dimension"></div>
                 </div>
             </div>
 
@@ -173,8 +178,8 @@
                     If you're seeking a motivated and adaptable team member eager to learn and contribute, feel free to reach out! You can contact me through LinkedIn, email (details in my resume), or the contact form here.
                     I'd love to hear from you!</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/rayyanshuda"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/rayyanshuda" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
             <div class="contact-right">
@@ -192,6 +197,7 @@
             </div>
         </div>
     </div>
+
     <div id="sidemenu" style="position: fixed; right: -200px; transition: right 0.3s;">
         <!-- Side menu content here -->
     </div>
@@ -200,7 +206,7 @@
   <!-- Footer -->
   <footer>
     Copyright &copy 2024. All rights reserved. <br>
-    Designed and Developed by Rayyan Huda 🧡
+    Designed & Developed by Rayyan Huda 🧡
   </footer>
 
 <script 
