--- a/index.html
+++ b/index.html
@@ -20,23 +20,22 @@
 <div id="header">
     <div class="container">
         <nav id="navbar">
-            <img src="images/rh.png" class="logo">
-            <ul id="sidemenu">
-                <li><a href="#header">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
-                <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-            </ul>
-            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+            <div class="container2">
+                <a href="#">
+                <img src="images/rh.png" class="logo">
+                </a>
+                <ul id="sidemenu">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                </ul>
+            </div>    
         </nav>
         <div class="animation-container, header-text">
             <h1>
                 Rayyan Huda <br>
                 <span id="description" class="fade">engineering student</span>
             </h1>
-          </div>
+        </div>
         <br>
         <h3>
             "Don't write code just for the sake, learn to be a problem solver."
@@ -53,106 +52,120 @@
     <div class="container">
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
-            <div class="work">
-                <img src="images/library.png" alt="Project 1">
-                <div class="work-content">
-                    <h3>Library Management System</h3>
-                    <p style="margin-bottom: 5px;">C++</p>
-                    <div class="tags-container">
-                        <span class="tag">OOP</span>
-                        <span class="tag">Inheritance</span>
-                        <span class="tag">Encapsulation</span>
-                        <span class="tag">Polymorphism</span>
+            <a href="https://github.com/rayyanshuda/library" target="_blank" rel="noopener noreferrer">
+                <div class="work"> 
+                    <img src="images/library.png" alt="Project 1">
+                    <div class="work-content">
+                        <h3>Library Management System</h3>
+                        <p style="margin-bottom: 5px;">C++</p>
+                        <div class="tags-container">
+                            <span class="tag">OOP</span>
+                            <span class="tag">Inheritance</span>
+                            <span class="tag">Encapsulation</span>
+                            <span class="tag">Polymorphism</span>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
 
-            <div class="work">
-                <img src="images/connect-four" alt="Project 2">
-                <div class="work-content">
-                    <h3>Connect 4 Replica Game Development</h3>
-                    <p style="margin-bottom: 5px;">Java</p>
-                    <div class="tags-container">
-                        <span class="tag">OOP</span>
-                        <span class="tag">GUI</span>
-                        <span class="tag">Game Development</span>
-                        <span class="tag">AWT & Swing Graphics</span>
+            <a href="https://github.com/rayyanshuda/connectfour" target="_blank" rel="noopener noreferrer">
+                <div class="work">
+                    <img src="images/connect-four" alt="Project 2">
+                    <div class="work-content">
+                        <h3>Connect 4 Replica Game Development</h3>
+                        <p style="margin-bottom: 5px;">Java</p>
+                        <div class="tags-container">
+                            <span class="tag">OOP</span>
+                            <span class="tag">GUI</span>
+                            <span class="tag">Game Development</span>
+                            <span class="tag">AWT & Swing Graphics</span>
+                        </div>
+                        <div class="dimension"></div>
                     </div>
-                    <div class="dimension"></div>
                 </div>
-            </div>
+            </a>
 
-            <div class="work">
-                <img src="images/library.png" alt="Project 3">
-                <div class="work-content">
-                    <h3>Borough Battle Simulator Game</h3>
-                    <p style="margin-bottom: 5px;">Python</p>
-                    <div class="tags-container">
-                        <span class="tag">OOP</span>
-                        <span class="tag">Inheritance</span>
-                        <span class="tag">Encapsulation</span>
-                        <span class="tag">Polymorphism</span>
+            <a href="https://github.com/rayyanshuda/borough-battle" target="_blank" rel="noopener noreferrer">
+                <div class="work">
+                    <img src="images/library.png" alt="Project 3">
+                    <div class="work-content">
+                        <h3>Borough Battle Simulator Game</h3>
+                        <p style="margin-bottom: 5px;">Python</p>
+                        <div class="tags-container">
+                            <span class="tag">OOP</span>
+                            <span class="tag">Inheritance</span>
+                            <span class="tag">Encapsulation</span>
+                            <span class="tag">Polymorphism</span>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>    
 
-            <div class="work">
-                <img src="images/jigsaw-puzzle.jpg" alt="Project 4">
-                <div class="work-content">
-                    <h3>Jigsaw Puzzle Solver Algorithm</h3>
-                    <p style="margin-bottom: 5px;">Java</p>
-                    <div class="tags-container">
-                        <span class="tag">OOP</span>
-                        <span class="tag">Logic</span>
-                        <span class="tag">Data Structures</span>
-                        <span class="tag">Algorithmic Thinking</span>
-                        <span class="tag">Simulation</span>
+            <a href="https://github.com/rayyanshuda/jigsaw-puzzle" target="_blank" rel="noopener noreferrer">
+                <div class="work">
+                    <img src="images/jigsaw-puzzle.jpg" alt="Project 4">
+                    <div class="work-content">
+                        <h3>Jigsaw Puzzle Solver Algorithm</h3>
+                        <p style="margin-bottom: 5px;">Java</p>
+                        <div class="tags-container">
+                            <span class="tag">OOP</span>
+                            <span class="tag">Logic</span>
+                            <span class="tag">Data Structures</span>
+                            <span class="tag">Algorithmic Thinking</span>
+                            <span class="tag">Simulation</span>
+                        </div>
+                        <div class="dimension"></div>
                     </div>
-                    <div class="dimension"></div>
                 </div>
-            </div>
+            </a>    
 
-            <div class="work">
-                <img src="images/library.png" alt="Project 5">
-                <div class="work-content">
-                    <h3>Food Ordering App Design</h3>
-                    <p style="margin-bottom: 5px;">Figma</p>
-                    <div class="tags-container">
-                        <span class="tag">UI/UX Design</span>
-                        <span class="tag">Prototyping</span>
-                        <span class="tag">Product Thinking</span>
-                        <span class="tag">Product Design</span>
+            <a href=https://www.figma.com/community/file/1414311701779591682/food-ordering-app" target="_blank" rel="noopener noreferrer">
+                <div class="work">
+                    <img src="images/library.png" alt="Project 5">
+                    <div class="work-content">
+                        <h3>Food Ordering App Design</h3>
+                        <p style="margin-bottom: 5px;">Figma</p>
+                        <div class="tags-container">
+                            <span class="tag">UI/UX Design</span>
+                            <span class="tag">Prototyping</span>
+                            <span class="tag">Product Thinking</span>
+                            <span class="tag">Product Design</span>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>    
 
-            <div class="work">
-                <img src="images/cybertruck-jeep.png" alt="Project 6">
-                <div class="work-content">
-                    <h3>Cybertruck Jeep 3D Design</h3>
-                    <p style="margin-bottom: 5px;">SolidWorks</p>
-                    <div class="tags-container">
-                        <span class="tag">CAD Modeling</span>
-                        <span class="tag">Automotive Design</span>
-                        <span class="tag">Concept Vehicle</span>
-                        <span class="tag">Product Design</span>
+            <a href="https://github.com/rayyanshuda/cybertruck-jeep" target="_blank" rel="noopener noreferrer">
+                <div class="work">
+                    <img src="images/cybertruck-jeep.png" alt="Project 6">
+                    <div class="work-content">
+                        <h3>Cybertruck Jeep 3D Design</h3>
+                        <p style="margin-bottom: 5px;">SolidWorks</p>
+                        <div class="tags-container">
+                            <span class="tag">CAD Modeling</span>
+                            <span class="tag">Automotive Design</span>
+                            <span class="tag">Concept Vehicle</span>
+                            <span class="tag">Product Design</span>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>    
 
-            <div class="work">
-                <img src="images/gumball.png" alt="Project 6">
-                <div class="work-content">
-                    <h3>Gumball Machine 3D Design</h3>
-                    <p style="margin-bottom: 5px;">SolidWorks</p>
-                    <div class="tags-container">
-                        <span class="tag">CAD Modeling</span>
-                        <span class="tag">Product Design</span>
-                        <span class="tag">Prototyping</span>
-                        <span class="tag">Assembly Simulation</span>
+            <a href="https://github.com/rayyanshuda/gumball3D" target="_blank" rel="noopener noreferrer">
+                <div class="work">
+                    <img src="images/gumball.png" alt="Project 6">
+                    <div class="work-content">
+                        <h3>Gumball Machine 3D Design</h3>
+                        <p style="margin-bottom: 5px;">SolidWorks</p>
+                        <div class="tags-container">
+                            <span class="tag">CAD Modeling</span>
+                            <span class="tag">Product Design</span>
+                            <span class="tag">Prototyping</span>
+                            <span class="tag">Assembly Simulation</span>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>    
 
 
         </div>
