final changes to the home webpage

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <a href="#">
                 <img src="images/rh.png" class="logo">
                 </a>
-                <ul id="sidemenu">
-                    <li><a href="#about">About</a></li>
+                <ul>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                 </ul>
             </div>    
@@ -209,10 +209,6 @@
                 </form>
             </div>
         </div>
-    </div>
-
-    <div id="sidemenu" style="position: fixed; right: -200px; transition: right 0.3s;">
-        <!-- Side menu content here -->
     </div>
  </div>
 
