jQuery updates to the home webpage

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
     <script src="main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
 </head>
 <body>
+<div id="content">
 <div id="header">
     <div class="container">
         <nav id="navbar">
@@ -222,7 +224,7 @@
 <script 
     src="main.js" defer>
 </script>
-
+</div>
 </body>
 </html>
 
