css updates for about webpage

--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
             </ul>
         </div>    
      </nav>
+     
 
 <!-- contact section-->
 <div id="about-section">
@@ -48,7 +49,7 @@
                     <br> <br>When I'm not collaborating on a new project, I like going out with my friends, playing outdoor sports, or trying new video games!
                 </p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/rayyanhuda/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/rayyanshuda" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
