--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 <br>
 
 
+
 <!-- contact section-->
  <div id="contact">
     <div class="container">
@@ -194,7 +195,7 @@
                     If you're seeking a motivated and adaptable team member eager to learn and contribute, feel free to reach out! You can contact me through LinkedIn, email (details in my resume), or the contact form here.
                     I'd love to hear from you!</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/rayyanhuda/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/rayyanshuda" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
