--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
 
             <a href="https://github.com/rayyanshuda/borough-battle" target="_blank" rel="noopener noreferrer">
                 <div class="work">
-                    <img src="images/library.png" alt="Project 3">
+                    <img src="images/battle-game.png" alt="Project 3">
                     <div class="work-content">
                         <h3>Borough Battle Simulator Game</h3>
                         <p style="margin-bottom: 5px;">Python</p>
                         <div class="tags-container">
                             <span class="tag">OOP</span>
-                            <span class="tag">Inheritance</span>
-                            <span class="tag">Encapsulation</span>
-                            <span class="tag">Polymorphism</span>
+                            <span class="tag">Game Development</span>
+                            <span class="tag">Logic</span>
+                            <span class="tag">Simulation</span>
                         </div>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
 
             <a href=https://www.figma.com/community/file/1414311701779591682/food-ordering-app" target="_blank" rel="noopener noreferrer">
                 <div class="work">
-                    <img src="images/library.png" alt="Project 5">
+                    <img src="images/food-ordering.jpg" alt="Project 5">
                     <div class="work-content">
                         <h3>Food Ordering App Design</h3>
                         <p style="margin-bottom: 5px;">Figma</p>
