--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio of Rayyan Huda showcasing software development and design projects.">
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
-    <title>Rayyan Huda | Portfolio</title>
+    <title>About | Rayyan Huda</title>
     <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
     <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
     <script src="main.js" defer></script> <!-- link to the javascript file -->
@@ -30,7 +30,8 @@
                 <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
-     </nav>
+    </nav>
+    </div>
      
 
 <!-- contact section-->
@@ -62,7 +63,7 @@
  </div>
 
 
-<!-- education/experience section
+<!-- education/experience section 
 <div id="about">
     <div class="container">
         <div class="row">
@@ -71,30 +72,26 @@
                 <p>[insert smt about yourself here]</p>
                 
                 <div class="tab-titles">
-                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links active-link" onclick="opentab('achievements')">Achievements</p>
                     <p class="tab-links" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
-                <div class="tab-contents active-tab" id="skills">
+                <div class="tab-contents active-tab" id="achievements">
                     <ul>
-                        <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
-                        <li><span>Web Development</span><br>Web app Development</li>
+                        <li><span>Hackathon</span><br>Nasa Space Apps Challenge</li>
+                        <li><span>Hakathon</span><br>Hack for Earth - Winner</li>
                         <li><span>App Development</span><br>Building Android/iOS apps</li> 
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
-                        <li><span>2019 - 2021</span><br>Team lead at StarApp LLC.</li>
-                        <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li> 
-                        <li><span>2016 - 2017</span><br>Internship at ekart eCommerce.</li>
+                        <li><span>2023 - 2024</span><br>Teaching Assistant - Kumon Institute of Education Co Ltd.</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
-                        <li><span>2016</span><br>MBA from MIT Bangalore</li>
-                        <li><span>2014</span><br>BBa from ISM Bangalore</li> 
+                        <li><span>2024 - Present</span><br>University of Waterloo</li>
+                        <li><span>2019 - 2024</span><br>Fraser Heights Secondary School</li>
                     </ul>
                 </div>
             </div>
