--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio of Rayyan Huda showcasing software development and design projects.">
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
-    <title>Rayyan Huda | Portfolio</title>
+    <title>Home | Rayyan Huda</title>
     <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
     <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
     <script src="main.js" defer></script> <!-- link to the javascript file -->
@@ -50,12 +50,13 @@
             Keep scrolling to explore the projects I've created below!</p>
     </div>
 </div>
+</div>
 
 <div id="projects">
     <div class="container">
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
-            <a href="https://github.com/rayyanshuda/library" target="_blank" rel="noopener noreferrer">
+            <a href="library-system.html">
                 <div class="work"> 
                     <img src="images/library.png" alt="Project 1">
                     <div class="work-content">
@@ -98,7 +99,7 @@
                             <span class="tag">OOP</span>
                             <span class="tag">Game Development</span>
                             <span class="tag">Logic</span>
-                            <span class="tag">Simulation</span>
+                            <span class="tag">Simulation </span>
                         </div>
                     </div>
                 </div>
@@ -181,7 +182,7 @@
 <br>
 <br>
 <br>
-<br>
+<br> 
 
 
 
