final changes to index

--- a/library-system.html
+++ b/library-system.html
@@ -30,7 +30,25 @@
                 <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
-     </nav>
+    </nav>
+    </div>
+
+<div id="project-description">
+    <div class="container">
+        <div class="name">
+            <h1>
+                <span>Library Management System</span>
+                <br>
+                Managing Books, Libraries, and Users
+            </h1>
+        </div>
+        <div class="row">
+            <div class="debut">
+                <p>testing</p>
+            </div>
+        </div>
+    </div>        
+</div>
 
 
 
