--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container">
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
-            <a href="library-system.html">
+            <a href="https://github.com/rayyanshuda/library" target="_blank" rel="noopener noreferrer">
                 <div class="work"> 
                     <img src="images/library.png" alt="Project 1">
                     <div class="work-content">
