changes to about.html css elements

--- a/library-system.html
+++ b/library-system.html
@@ -35,7 +35,7 @@
 
 <div id="project-description">
     <div class="container">
-        <div class="name">
+        <div class="project-title">
             <h1>
                 <span>Library Management System</span>
                 <br>
@@ -43,7 +43,7 @@
             </h1>
         </div>
         <div class="row">
-            <div class="debut">
+            <div class="about-text">
                 <p>testing</p>
             </div>
         </div>
