updates involving connect-four game webpage

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </a>
 
-            <a href="https://github.com/rayyanshuda/connectfour" target="_blank" rel="noopener noreferrer">
+            <a href="connect-four.html">
                 <div class="work">
                     <img src="images/connect-four" alt="Project 2">
                     <div class="work-content">
