borough battle webpage updates

--- a/connect-four.html
+++ b/connect-four.html
@@ -125,8 +125,7 @@
         </p>
 
         <p>
-            To showcase my learning, you can view my implementation of books, a library system, and library users and their respective attributes, constructors,
-            and methods. You can find more information about this project on my Github.
+            To showcase my learning, you can view my implementation of a connect four game and find more information about this project on my Github.
         </p>
 
     </div>
