--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
             </a>
 
-            <a href="https://github.com/rayyanshuda/borough-battle" target="_blank" rel="noopener noreferrer">
+            <a href="borough-battle.html">
                 <div class="work">
                     <img src="images/battle-game.png" alt="Project 3">
                     <div class="work-content">
