final updates for borough battle webpage

--- a/borough-battle.html
+++ b/borough-battle.html
@@ -130,7 +130,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <img src="images/future-connect-four.png" alt="implementation of 'L' shaped win">
+            <img src="images/borough battle ending.png" alt="pic to show moving forward">
         </div>
         <p>
             For a beginner level project, I'd say I'm very proud of what I've developed. Although it might be simple, 
