jigsaw puzzle solver updates

--- a/borough-battle.html
+++ b/borough-battle.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Portfolio of Rayyan Huda showcasing software development and design projects.">
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
-    <title>Connect Four Game | Rayyan Huda</title>
+    <title>Borough Battle Game | Rayyan Huda</title>
     <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
     <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
     <script src="main.js" defer></script> <!-- link to the javascript file -->
