--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
             </a>    
 
-            <a href="https://github.com/rayyanshuda/jigsaw-puzzle" target="_blank" rel="noopener noreferrer">
+            <a href="jigsaw-puzzle.html">
                 <div class="work">
                     <img src="images/jigsaw-puzzle.jpg" alt="Project 4">
                     <div class="work-content">
