food ordering app webpage updates

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
             </a>    
 
-            <a href=https://www.figma.com/community/file/1414311701779591682/food-ordering-app" target="_blank" rel="noopener noreferrer">
+            <a href="food-ordering-app.html">
                 <div class="work">
                     <img src="images/food-ordering.jpg" alt="Project 5">
                     <div class="work-content">
