--- a/borough-battle.html
+++ b/borough-battle.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <div id="content">
+        <div class="progress-bar"></div>
     <nav id="navbar">
         <div class="container2">
             <a href="index.html" behavior="smooth">
