--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 <div id="content">
+    <div class="progress-bar"></div>
 <div id="header">
     <div class="container">
         <nav id="navbar">
