3d cybertruck project updates

--- a/food-ordering-app.html
+++ b/food-ordering-app.html
@@ -71,7 +71,7 @@
             I wanted to create this project to expand my skillset and try something new. Being invested in programming and game development,
             UI/UX Design intrigued me next and I was fascinated by the front-end design work. Figma was a rather simple tool to get used to,
             many of the screens were repetitive, but I learned a lot, like the typography, use of icons, transitions, wireframes, and prototyping.
-            This project was originally created for a hackathon, Hack4Earth on Devpost, called "Find Your Adventure", but after the hackathon ended,
+            This project was a winning submission, originally created for a hackathon, Hack4Earth on Devpost, called "Find Your Adventure", but after the hackathon ended,
             I wanted to improve the project and I continued working on it, adding some improvements, and this is the final product.
         </p>
 
