--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
             </a>    
 
-            <a href="https://github.com/rayyanshuda/cybertruck-jeep" target="_blank" rel="noopener noreferrer">
+            <a href="cybertruck-jeep.html">
                 <div class="work">
                     <img src="images/cybertruck-jeep.png" alt="Project 6">
                     <div class="work-content">
