--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T65TB0XZ8Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T65TB0XZ8Z');
+</script>
 <body>
 <div id="content">
     <div class="progress-bar"></div>
@@ -156,7 +165,7 @@
                 </div>
             </a>    
 
-            <a href="https://github.com/rayyanshuda/gumball3D" target="_blank" rel="noopener noreferrer">
+            <a href="gumball-machine.html">
                 <div class="work">
                     <img src="images/gumball.png" alt="Project 6">
                     <div class="work-content">
