video border update

--- a/gumball-machine.html
+++ b/gumball-machine.html
@@ -251,7 +251,7 @@
             <h2>What did I learn?</h2>
     
             <div class="project-image">
-                <video controls muted playsinline preload="auto" class="food-video" src="images/gumball-demonstration.mp4" type="video/mp4" controlslist="nodownload"></video>
+                <video controls muted playsinline preload="auto" class="gumball-video" src="images/gumball-demonstration.mp4" type="video/mp4" controlslist="nodownload"></video>
             </div>
             <p>
                 This project taught me lessons in 3D modeling, problem-solving, and practical design adjustments. A crucial challenge was learning to navigate SolidWorks' surface modeling tools, as sculpting organic shapes like a squirrel's face often resulted in self-intersecting surfaces, broken constraints, and undefined sketches. Designing smooth transitions between the ears, nose, and head required multiple iterations, and even small modifications sometimes caused unexpected errors in the model tree. Another difficulty was managing complex assemblies, making sure that different components, such as the head, body, and container, fit together without interference while still allowing for proper movement. 
