--- a/gumball-machine.html
+++ b/gumball-machine.html
@@ -195,7 +195,7 @@
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
                             <img src="images/gumball spinner initial.png" alt="gumball machine assembly video" style="margin-bottom: 15px;">
-                            <p id="concept-text">Initial Crank Concept</p>
+                            <p id="concept-text">Initial Spinner Concept</p>
                         </div>
                         <p>
                             The spinner had curved slots where it would hold the ball. With my limited knowledge of 3D modelling, I wasn't sure how I would design that. However, I was familiar with an extrude method to create a rectangular sketch and extrude cut it. To allow a smoother fit of the crank into the spinner, we decided to add chamfers in the slot for the spinner to ease its way in.
