--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                 I'm excited to experiment, learn, and bring my ideas to life to spark curiosity and inspire others.
                 Keep scrolling to explore the projects I've created below!</p>
         </div>
+        
+        <div class="scroll-icon">
+            <div class="scroll-body">
+                <div class="scroller"></div>
+            </div>
+        </div>
     </div>
 </div>
 
