SEO alt text updates

--- a/borough-battle.html
+++ b/borough-battle.html
@@ -33,7 +33,7 @@
     <nav id="navbar">
         <div class="container2">
             <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
                 <li><a href="about.html">About</a></li>
@@ -87,7 +87,7 @@
 
         <h2>Concept</h2>
         <div class="project-image">
-            <img src="images/borough-battle-intro2.png" alt="picture of a normal connect four game">
+            <img src="images/borough-battle-intro2.png" alt="example player versus computer game">
         </div>
         <p>
             The concept of the game is to be in control of five boroughs; Leaf Village, Sand Village, Cloud Village, Stone Village, and Mist Village.
@@ -140,7 +140,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <img src="images/borough battle ending.png" alt="pic to show moving forward">
+            <img src="images/borough battle ending.png" alt="pixel night-time image resembling a game end screen">
         </div>
         <p>
             For a beginner level project, I'd say I'm very proud of what I've developed. Although it might be simple, 
