--- a/cybertruck-jeep.html
+++ b/cybertruck-jeep.html
@@ -85,7 +85,7 @@
         <div class="container">
             <h2>Why This Project?</h2>
             <div class="project-image">
-                <img src="images//cybertruck-exploded.png" alt="cybertruck exploded view solidworks">
+                <img src="images//cybertruck-exploded.png" alt="cybertruck exploded view with bill of materials solidworks">
             </div>
             <p>
                 Following some Blender tutorials (the sprinkle donut was a good place to start), I wanted to dip my feet into 3D modelling and design. So I turned my head to SolidWorks,
@@ -96,7 +96,7 @@
     
             <h2>Concept & Struggles</h2>
             <div class="project-image">
-                <img src="images/cybertruck-model.jpg" alt="Cybertruck design 3D">
+                <img src="images/cybertruck-model.jpg" alt="cybertruck picture for concept reference">
             </div>
             <p>
                 The idea was to create a Jeep-like Cybertruck. The Cybertruck with it's box-y figure was perfect as a beginner to recreate and implement some features. I had some initial
