--- a/food-ordering-app.html
+++ b/food-ordering-app.html
@@ -33,7 +33,7 @@
     <nav id="navbar">
         <div class="container2">
             <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
                 <li><a href="about.html">About</a></li>
@@ -67,7 +67,7 @@
                 </p>
             </div>
             <div class="project-image">
-                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/WpHhldWMRQOQKUDjwmlSTr/Food-Ordering-App---Rayyan-Huda?node-id=0-1&embed-host=share" allowfullscreen></iframe>
+                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/WpHhldWMRQOQKUDjwmlSTr/Food-Ordering-App---Rayyan-Huda?node-id=0-1&embed-host=share" allowfullscreen ></iframe>
             </div>
         </div>
     </div>        
@@ -103,7 +103,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <video controls muted class="food-video" src="images/food-app-video.mp4" type="video/mp4"></video>
+            <video controls muted class="food-video" title="food ordering app video" src="images/food-app-video.mp4" type="video/mp4"></video>
         </div>
         <p>
             This project opened my eyes to the world of UI and Frontend Design. Already having experience in coding, I got a touch of both worlds of programming
