--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav id="navbar">
                 <div class="container2">
                     <a href="#">
-                    <img src="images/rh.png" class="logo">
+                    <img src="images/rh.png" class="logo" alt="rayyan huda logo">
                     </a>
                     <ul>
                         <li><a href="about.html">About</a></li>
@@ -74,7 +74,7 @@
         <div class="work-list">
             <a href="library-system.html">
                 <div class="work"> 
-                    <img src="images/library.png" alt="Project 1">
+                    <img src="images/library.png" alt="library c++ project image">
                     <div class="work-content">
                         <h3>Library Management System</h3>
                         <p style="margin-bottom: 5px;">C++</p>
@@ -90,7 +90,7 @@
 
             <a href="connect-four.html">
                 <div class="work">
-                    <img src="images/connect-four" alt="Project 2">
+                    <img src="images/connect-four" alt="connect four java project immage">
                     <div class="work-content">
                         <h3>Connect 4 Replica Game Development</h3>
                         <p style="margin-bottom: 5px;">Java</p>
@@ -107,7 +107,7 @@
 
             <a href="borough-battle.html">
                 <div class="work">
-                    <img src="images/battle-game.png" alt="Project 3">
+                    <img src="images/battle-game.png" alt="borough battle python project image">
                     <div class="work-content">
                         <h3>Borough Battle Simulator Game</h3>
                         <p style="margin-bottom: 5px;">Python</p>
@@ -123,7 +123,7 @@
 
             <a href="jigsaw-puzzle.html">
                 <div class="work">
-                    <img src="images/jigsaw-puzzle.jpg" alt="Project 4">
+                    <img src="images/jigsaw-puzzle.jpg" alt="jigsaw puzzle project java project image">
                     <div class="work-content">
                         <h3>Jigsaw Puzzle Solver Algorithm</h3>
                         <p style="margin-bottom: 5px;">Java</p>
@@ -141,7 +141,7 @@
 
             <a href="food-ordering-app.html">
                 <div class="work">
-                    <img src="images/food-ordering.jpg" alt="Project 5">
+                    <img src="images/food-ordering.jpg" alt="food ordering figma app">
                     <div class="work-content">
                         <h3>Food Ordering App Design</h3>
                         <p style="margin-bottom: 5px;">Figma</p>
@@ -157,7 +157,7 @@
 
             <a href="cybertruck-jeep.html">
                 <div class="work">
-                    <img src="images/cybertruck-jeep.png" alt="Project 6">
+                    <img src="images/cybertruck-jeep.png" alt="cybertruck 3D solidworks image">
                     <div class="work-content">
                         <h3>Cybertruck Jeep 3D Design</h3>
                         <p style="margin-bottom: 5px;">SolidWorks</p>
@@ -173,7 +173,7 @@
 
             <a href="gumball-machine.html">
                 <div class="work">
-                    <img src="images/gumball.png" alt="Project 6">
+                    <img src="images/gumball.png" alt="gumball machine 3D solidworks image">
                     <div class="work-content">
                         <h3>Gumball Machine 3D Design</h3>
                         <p style="margin-bottom: 5px;">SolidWorks</p>
