--- a/jigsaw-puzzle.html
+++ b/jigsaw-puzzle.html
@@ -33,7 +33,7 @@
     <nav id="navbar">
         <div class="container2">
             <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
                 <li><a href="about.html">About</a></li>
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="project-image">
-            <img src="images/puzzle-solvere.png" alt="puzzle solver image">
+            <img src="images/puzzle-solvere.png" alt="puzzle solver method image">
             </div>
         </div>
     </div>        
@@ -85,7 +85,7 @@
 
         <h2>Concept</h2>
         <div class="project-image">
-            <img src="images/jigsaw algorithm.png" alt="picture of a normal connect four game">
+            <img src="images/jigsaw algorithm.png" alt="jigsaw puzzle solving concept">
         </div>
         <p>
             In standard jigsaw puzzles, each piece has four sides, and each side is either a tab (indenting outwards), blank (indenting inwards) or a straight edge. 
@@ -125,7 +125,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <img src="images/puzzles.jpg" alt="pic to show moving forward">
+            <img src="images/puzzles.jpg" alt="puzzles laying on the ground">
         </div>
         <p>
             Through this project, I learned the importance of breaking down complex problems into manageable, logical steps. Initially, I struggled with conceptualizing a 
