--- a/gumball-machine.html
+++ b/gumball-machine.html
@@ -37,7 +37,7 @@
     <nav id="navbar">
         <div class="container2">
             <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
                 <li><a href="about.html">About</a></li>
@@ -108,7 +108,7 @@
         <div class="container">
             <h2>Why This Project?</h2>
             <div class="project-image">
-                <img id="gumball-gif" src="images/gumball assembly.gif" alt="gumball machine assembly video">
+                <img id="gumball-gif" src="images/gumball assembly.gif" alt="gumball machine assembly and collapse gif">
             </div>
             <p>
                 This was my second 3D modelling project. I had a lot of fun experimenting SolidWorks features on my Cybertruck Jeep model. Having learned a lot from my previous experience and wanting to try something more advanced, I was inspired by Lego assemblies. Instead of 3D printing the gumball machine, I designed separate parts that could be assembled to create a 3D gumball. This project was designed for a group project, to create a 3D model involving the motif of a Canadian animal. My group decided to design a gumball machine in the shape of a squirrel, hence the head and tail parts. Spanning over a month and a half, I enjoyed the process of creating something new, and learning about locking mechanisms to keep the different parts in place.
@@ -116,7 +116,7 @@
     
             <h2>Concept & Struggles</h2>
             <div class="project-image">
-                <img id="gumball-gif" src="images/gumball sketch.png" alt="gumball machine assembly video">
+                <img id="gumball-gif" src="images/gumball sketch.png" alt="initial gumball machine concept idea">
             </div>
             <p>
                 The idea was a squirrel shaped gumball machine. Unscrewing the head will allow a gumball to be inserted into the body of the squirrel. The gumball will drop through the body into the container of the machine where it will be caught in the spinner. The crank will need to be spun to funnel the gumball out of the container and in the tail, where it enters the final stage of its journey, spiraling down and exiting out of the machine, when it can then be eaten.
@@ -132,7 +132,7 @@
                         <h1>Container</h1>
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
-                            <img src="images/container draft model.png" alt="gumball machine assembly video" style="margin-bottom: 15px;">
+                            <img src="images/container draft model.png" alt="initial container concept picture" style="margin-bottom: 15px;">
                             <p id="concept-text">Initial Container Concept</p>
                         </div>
                         <p>
@@ -150,7 +150,7 @@
                         <h1>Body</h1>
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
-                            <img src="images/gumball body initial.png" alt="gumball machine assembly video" style="margin-bottom: 15px;">
+                            <img src="images/gumball body initial.png" alt="initial body concept picture" style="margin-bottom: 15px;">
                             <p id="concept-text">Initial Body Concept</p>
                         </div>
                         <p>
@@ -172,7 +172,7 @@
                         <h1>Crank</h1>
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
-                            <img src="images/gumball crank initial.png" alt="gumball machine assembly video" style="margin-bottom: 15px;">
+                            <img src="images/gumball crank initial.png" alt="initial crank concept picture" style="margin-bottom: 15px;">
                             <p id="concept-text">Initial Crank Concept</p>
                         </div>
                         <p>
@@ -194,7 +194,7 @@
                         <h1>Spinner</h1>
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
-                            <img src="images/gumball spinner initial.png" alt="gumball machine assembly video" style="margin-bottom: 15px;">
+                            <img src="images/gumball spinner initial.png" alt="initial spinner concept picture" style="margin-bottom: 15px;">
                             <p id="concept-text">Initial Spinner Concept</p>
                         </div>
                         <p>
@@ -216,7 +216,7 @@
                         <h1>Head</h1>
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
-                            <img src="images/gumball head concept.png" alt="gumball head concept" style="margin-bottom: 15px">
+                            <img src="images/gumball head concept.png" alt="initial head concept picture" style="margin-bottom: 15px">
                             <p id="concept-text">Initial Head Concept</p>
                         </div>
                         <p>
@@ -236,7 +236,7 @@
                         <h1>Container</h1>
                         <h2>Concept / Struggles</h2>
                         <div class="project-image">
-                            <img src="images/gumball initial.png" alt="gumball machine assembly video" style="margin-bottom: 15px;">
+                            <img src="images/gumball initial.png" alt="initial tail concept picture" style="margin-bottom: 15px;">
                             <p id="concept-text">Initial Tail Concept</p>
                         </div>
                         <p>
@@ -251,7 +251,7 @@
             <h2>What did I learn?</h2>
     
             <div class="project-image">
-                <video controls muted playsinline preload="auto" class="gumball-video" src="images/gumball-demonstration.mp4" type="video/mp4" controlslist="nodownload"></video>
+                <video controls muted playsinline preload="auto" class="gumball-video" title="gumball demonstration assembly video" src="images/gumball-demonstration.mp4" type="video/mp4" controlslist="nodownload"></video>
             </div>
             <p>
                 This project taught me lessons in 3D modeling, problem-solving, and practical design adjustments. A crucial challenge was learning to navigate SolidWorks' surface modeling tools, as sculpting organic shapes like a squirrel's face often resulted in self-intersecting surfaces, broken constraints, and undefined sketches. Designing smooth transitions between the ears, nose, and head required multiple iterations, and even small modifications sometimes caused unexpected errors in the model tree. Another difficulty was managing complex assemblies, making sure that different components, such as the head, body, and container, fit together without interference while still allowing for proper movement. 
