--- a/library-system.html
+++ b/library-system.html
@@ -33,7 +33,7 @@
     <nav id="navbar">
         <div class="container2">
             <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
                 <li><a href="about.html">About</a></li>
