url name change

--- a/cybertruck-jeep/index.html
+++ b/cybertruck-jeep/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Cybertruck Jeep 3D Design | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png">
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
-    <script src="main.js" defer></script> <!-- Link to external JS -->
+    <link rel="icon" href="/images/rh.png">
+    <link rel="stylesheet" href="/style.css"> <!-- Link to external CSS -->
+    <script src="/main.js" defer></script> <!-- Link to external JS -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -33,12 +33,12 @@
         <div class="progress-bar"></div>
     <nav id="navbar">
         <div class="container2">
-            <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <a href="/" behavior="smooth">
+            <img src="/images/rh.png" class="logo">
             </a>
             <ul id="sidemenu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
@@ -85,7 +85,7 @@
         <div class="container">
             <h2>Why This Project?</h2>
             <div class="project-image">
-                <img src="images//cybertruck-exploded.png" alt="cybertruck exploded view with bill of materials solidworks">
+                <img src="/images//cybertruck-exploded.png" alt="cybertruck exploded view with bill of materials solidworks">
             </div>
             <p>
                 Following some Blender tutorials (the sprinkle donut was a good place to start), I wanted to dip my feet into 3D modelling and design. So I turned my head to SolidWorks,
@@ -96,7 +96,7 @@
     
             <h2>Concept & Struggles</h2>
             <div class="project-image">
-                <img src="images/cybertruck-model.jpg" alt="cybertruck picture for concept reference">
+                <img src="/images/cybertruck-model.jpg" alt="cybertruck picture for concept reference">
             </div>
             <p>
                 The idea was to create a Jeep-like Cybertruck. The Cybertruck with it's box-y figure was perfect as a beginner to recreate and implement some features. I had some initial
@@ -115,7 +115,7 @@
             <h2>What did I learn?</h2>
     
             <div class="project-image">
-                <img src="images/cybertruck-sectional.png" alt="cybertruck sectional view solidworks">
+                <img src="/images/cybertruck-sectional.png" alt="cybertruck sectional view solidworks">
             </div>
             <p>
                 I learned how to break down a complex design into manageable parts, starting with the basic frame and gradually modelling details like the angular body panels and wheel wells. I improved my understanding of parametric modeling, making sure the dimensions and constraints were properly defined for best practices. Using surface modeling, fillets, and chamfers, I experimented with sharp edges and smooth transitions around faces to replicate the Cybertruck's aesthetic while incorporating Jeep-like rugged elements. I also became more efficient with assemblies, learning how to properly mate components like wheels, doors, and the chassis. Overall, this project helped me develop precision, design iteration skills, and problem-solving techniques when dealing with unique geometries in SolidWorks.
@@ -144,6 +144,10 @@
         Copyright &copy 2024. All rights reserved. <br>
         Designed & Developed by Rayyan Huda 🧡
     </footer>
+
+    <script 
+    src="/main.js" defer>
+    </script>
 
     <!-- Three.js and STLLoader scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
