--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Home | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
-    <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js" defer></script> <!-- link to the javascript file -->
+    <link rel="icon" href="/images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
+    <link rel="stylesheet" href="/style.css"> <!-- link to the style.css file -->
+    <script src="/main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -35,11 +35,11 @@
             <nav id="navbar">
                 <div class="container2">
                     <a href="#">
-                    <img src="images/rh.png" class="logo" alt="rayyan huda logo">
+                    <img src="/images/rh.png" class="logo" alt="rayyan huda logo">
                     </a>
                     <ul>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                        <li><a href="/about/">About</a></li>
+                        <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                     </ul>
                 </div>    
             </nav>
@@ -72,7 +72,7 @@
     <div class="container">
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
-            <a href="library-system.html">
+            <a href="/library-system/">
                 <div class="work"> 
                     <img src="images/library.png" alt="library c++ project image">
                     <div class="work-content">
@@ -88,7 +88,7 @@
                 </div>
             </a>
 
-            <a href="connect-four.html">
+            <a href="/connect-four/">
                 <div class="work">
                     <img src="images/connect-four" alt="connect four java project immage">
                     <div class="work-content">
@@ -105,7 +105,7 @@
                 </div>
             </a>
 
-            <a href="borough-battle.html">
+            <a href="/borough-battle/">
                 <div class="work">
                     <img src="images/battle-game.png" alt="borough battle python project image">
                     <div class="work-content">
@@ -121,7 +121,7 @@
                 </div>
             </a>    
 
-            <a href="jigsaw-puzzle.html">
+            <a href="/jigsaw-puzzle/">
                 <div class="work">
                     <img src="images/jigsaw-puzzle.jpg" alt="jigsaw puzzle project java project image">
                     <div class="work-content">
@@ -139,7 +139,7 @@
                 </div>
             </a>    
 
-            <a href="food-ordering-app.html">
+            <a href="/food-ordering-app/">
                 <div class="work">
                     <img src="images/food-ordering.jpg" alt="food ordering figma app">
                     <div class="work-content">
@@ -155,7 +155,7 @@
                 </div>
             </a>    
 
-            <a href="cybertruck-jeep.html">
+            <a href="/cybertruck-jeep/">
                 <div class="work">
                     <img src="images/cybertruck-jeep.png" alt="cybertruck 3D solidworks image">
                     <div class="work-content">
@@ -171,7 +171,7 @@
                 </div>
             </a>    
 
-            <a href="gumball-machine.html">
+            <a href="/gumball-machine/">
                 <div class="work">
                     <img src="images/gumball.png" alt="gumball machine 3D solidworks image">
                     <div class="work-content">
@@ -248,7 +248,6 @@
 <script 
     src="main.js" defer>
 </script>
-
 
 </script>
 </div>
