--- a/library-system/index.html
+++ b/library-system/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Library Management System | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
-    <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js" defer></script> <!-- link to the javascript file -->
+    <link rel="icon" href="/images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
+    <link rel="stylesheet" href="/style.css"> <!-- link to the style.css file -->
+    <script src="/main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -32,12 +32,12 @@
         <div class="progress-bar"></div>
     <nav id="navbar">
         <div class="container2">
-            <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
+            <a href="/" behavior="smooth">
+            <img src="/images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="project-image">
-            <img src="images/library-system-intro-pic4.png" alt="code preview from the library system project">
+            <img src="/images/library-system-intro-pic4.png" alt="code preview from the library system project">
             </div>
         </div>
     </div>        
@@ -458,7 +458,7 @@
   </footer>
 
 <script 
-    src="main.js" defer>
+    src="/main.js" defer>
 </script>
 </div>
 </body>
