--- a/about/index.html
+++ b/about/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>About | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
-    <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js" defer></script> <!-- link to the javascript file -->
+    <link rel="icon" href="/images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
+    <link rel="stylesheet" href="/style.css"> <!-- link to the style.css file -->
+    <script src="/main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -31,12 +31,12 @@
     <div id="content">
     <nav id="navbar">
         <div class="container2">
-            <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo">
+            <a href="/" behavior="smooth">
+            <img src="/images/rh.png" class="logo">
             </a>
             <ul id="sidemenu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="picture">
-                <img src="images/about-me.png" alt="self portrait">
+                <img src="/images/about-me.png" alt="self portrait">
                 <p>Going on a boat for the first time!</p>
             </div>
         </div>
