--- a/borough-battle/index.html
+++ b/borough-battle/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Borough Battle Game | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
-    <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js" defer></script> <!-- link to the javascript file -->
+    <link rel="icon" href="/images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
+    <link rel="stylesheet" href="/style.css"> <!-- link to the style.css file -->
+    <script src="/main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -32,12 +32,12 @@
         <div class="progress-bar"></div>
     <nav id="navbar">
         <div class="container2">
-            <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
+            <a href="/" behavior="smooth">
+            <img src="/images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
@@ -67,7 +67,7 @@
                 </p>
             </div>
             <div class="project-image">
-            <img src="images/borough-title.png" alt="title image for borough battle game">
+            <img src="/images/borough-title.png" alt="title image for borough battle game">
             </div>
         </div>
     </div>        
@@ -87,7 +87,7 @@
 
         <h2>Concept</h2>
         <div class="project-image">
-            <img src="images/borough-battle-intro2.png" alt="example player versus computer game">
+            <img src="/images/borough-battle-intro2.png" alt="example player versus computer game">
         </div>
         <p>
             The concept of the game is to be in control of five boroughs; Leaf Village, Sand Village, Cloud Village, Stone Village, and Mist Village.
@@ -140,7 +140,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <img src="images/borough battle ending.png" alt="pixel night-time image resembling a game end screen">
+            <img src="/images/borough battle ending.png" alt="pixel night-time image resembling a game end screen">
         </div>
         <p>
             For a beginner level project, I'd say I'm very proud of what I've developed. Although it might be simple, 
@@ -164,7 +164,7 @@
   </footer>
 
 <script 
-    src="main.js" defer>
+    src="/main.js" defer>
 </script>
 </div>
 </body>
