--- a/food-ordering-app/index.html
+++ b/food-ordering-app/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Food Ordering App | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
-    <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js" defer></script> <!-- link to the javascript file -->
+    <link rel="icon" href="/images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
+    <link rel="stylesheet" href="/style.css"> <!-- link to the style.css file -->
+    <script src="/main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -32,12 +32,12 @@
         <div class="progress-bar"></div>
     <nav id="navbar">
         <div class="container2">
-            <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
+            <a href="/" behavior="smooth">
+            <img src="/images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
@@ -103,7 +103,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <video controls muted class="food-video" title="food ordering app video" src="images/food-app-video.mp4" type="video/mp4"></video>
+            <video controls muted class="food-video" title="food ordering app video" src="/images/food-app-video.mp4" type="video/mp4"></video>
         </div>
         <p>
             This project opened my eyes to the world of UI and Frontend Design. Already having experience in coding, I got a touch of both worlds of programming
@@ -131,7 +131,7 @@
   </footer>
 
 <script 
-    src="main.js" defer>
+    src="/main.js" defer>
 </script>
 </div>
 </body>
