--- a/jigsaw-puzzle/index.html
+++ b/jigsaw-puzzle/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Jigsaw Puzzle Solver | Rayyan Huda</title>
-    <link rel="icon" href="images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
-    <link rel="stylesheet" href="style.css"> <!-- link to the style.css file -->
-    <script src="main.js" defer></script> <!-- link to the javascript file -->
+    <link rel="icon" href="/images/rh.png"> <!-- link to the favicon (icon in browser tab next to the page title)-->
+    <link rel="stylesheet" href="/style.css"> <!-- link to the style.css file -->
+    <script src="/main.js" defer></script> <!-- link to the javascript file -->
     <script src="https://kit.fontawesome.com/54522e5b90.js" crossorigin="anonymous"></script> <!-- link to the fontawesome library -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -32,12 +32,12 @@
         <div class="progress-bar"></div>
     <nav id="navbar">
         <div class="container2">
-            <a href="index.html" behavior="smooth">
-            <img src="images/rh.png" class="logo" alt="rayyan huda logo">
+            <a href="/" behavior="smooth">
+            <img src="/images/rh.png" class="logo" alt="rayyan huda logo">
             </a>
             <ul id="sidemenu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="images/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/about/">About</a></li>
+                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="project-image">
-            <img src="images/puzzle-solvere.png" alt="puzzle solver method image">
+            <img src="/images/puzzle-solvere.png" alt="puzzle solver method image">
             </div>
         </div>
     </div>        
@@ -85,7 +85,7 @@
 
         <h2>Concept</h2>
         <div class="project-image">
-            <img src="images/jigsaw algorithm.png" alt="jigsaw puzzle solving concept">
+            <img src="/images/jigsaw algorithm.png" alt="jigsaw puzzle solving concept">
         </div>
         <p>
             In standard jigsaw puzzles, each piece has four sides, and each side is either a tab (indenting outwards), blank (indenting inwards) or a straight edge. 
@@ -125,7 +125,7 @@
         <h2>What did I learn?</h2>
 
         <div class="project-image">
-            <img src="images/puzzles.jpg" alt="puzzles laying on the ground">
+            <img src="/images/puzzles.jpg" alt="puzzles laying on the ground">
         </div>
         <p>
             Through this project, I learned the importance of breaking down complex problems into manageable, logical steps. Initially, I struggled with conceptualizing a 
@@ -153,7 +153,7 @@
   </footer>
 
 <script 
-    src="main.js" defer>
+    src="/main.js" defer>
 </script>
 </div>
 </body>
