SEO optimization tags

--- a/food-ordering-app/index.html
+++ b/food-ordering-app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ensures mobile-responsive -->
-    <meta name="description" content="Portfolio of Rayyan Huda showcasing software development and design projects.">
+    <meta name="description" content="Rayyan Huda - food ordering figma app, concept, struggles, and learning reflection">
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Food Ordering App | Rayyan Huda</title>
