--- a/gumball-machine/index.html
+++ b/gumball-machine/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Rayyan Huda showcasing software development and design projects.">
+    <meta name="description" content="Rayyan Huda - gumball machine 3d assembly project, concept, struggles, and interactive models">
     <meta name="keywords" content="Portfolio, Rayyan Huda, Software Developer, Projects, Web Development">
     <meta name="author" content="Rayyan Huda">
     <title>Gumball Machine 3D Design | Rayyan Huda</title>
