resume name change

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
             </a>
             <ul id="sidemenu">
                 <li><a href="/about">About</a></li>
-                <li><a href="/resume/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                <li><a href="/resume/external.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
             </ul>
         </div>    
     </nav>
